HealthCare CRM/debugger-project/force-app/main/default/objects/Student_1__c/fields/Mentor_Name__c.field-meta.xml
<CustomField>
    <fullName>Mentor_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Mentor</label>
    <referenceTo>Mentor1__c</referenceTo>
    <relationshipLabel>Students</relationshipLabel>
    <relationshipName>Students</relationshipName>
    <type>Lookup</type>
</CustomField>