HealthCare CRM/debugger-project/force-app/main/default/objects/Student_1__c/fields/Student_Email__c.field-meta.xml
<CustomField>
    <fullName>Student_Email__c</fullName>
    <description>This captures the email id of the student.</description>
    <inlineHelpText>Help me with the Student Email ID</inlineHelpText>
    <label>Student Email</label>
    <type>Email</type>
</CustomField>